--- a/quesee.html
+++ b/quesee.html
@@ -28,7 +28,7 @@
 		<!-- Optionally add helpers - button, thumbnail and/or media -->
 		<link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
 		<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-buttons.js?v=1.0.5"></script>
-		<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>
+		<!--<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-media.js?v=1.0.6"></script>-->
 
 		<link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
 		<script type="text/javascript" src="fancybox/source/helpers/jquery.fancybox-thumbs.js?v=1.0.7"></script>
@@ -51,10 +51,12 @@
 							css : {
 								'background' : 'rgba(70, 70, 70, 0.90)'
 							}
-						}
+						},
+                        buttons	: {}
 					},
 					nextEffect: 'fade',
 					prevEffect: 'fade',
+                    closeBtn: false,
 					padding : 0,
 					margin : [20, 60, 20, 60] // Increase left/right margin
 				});
@@ -113,7 +115,7 @@
 
                 <span id="moreOrLessAutomation">
 				<p>The needs of such a testing tool gravitate along these lines :
-					<ul>
+					<ul class="article_list">
                         <li>Record communication</li>
                         <li>Replay and compare baseline vs actual results</li>
                         <li>Visualize comparison results, there are three types of results : success, failure and
@@ -301,7 +303,7 @@
 
                 <p>Even though the tool is in a pretty good shape, there are some improvements that are requested
                     by the users and will probably be implemented in the future:
-                <ul>
+                <ul class="article_list">
                     <li>a side by side comparison view</li>
                     <li>a way of editing the expected result directly from the comparison view</li>
                     <li>hide the actions that don't make sense in some scenarios</li>
