started to add content to the curation tool article

--- a/test_history.html
+++ b/test_history.html
@@ -150,7 +150,7 @@
 				<p>Another big problem was the cluttered view when test executions were too close and started to overlap. In order to solve this, I chose treat those executions as a group and display them in a dotted rectangle. 
 			Clicking on the dotted rectangle would expand that grouping to the full length of the viewport so that it can be further explored. This is the same data displayed in the last figure of the previous version.</p>
 				<a class="fancybox" rel="group" title="simple line with time and executions" href="img/test_history/9.png"><img class="article_image" id="test_history_9" src="img/test_history/9.png" alt="" /></a>
-				<p>Clicking on the last exception link would bring the widget in the following state, where the last execution is selected and the position and zoom level of the chart are computed so that the selected item is not hidden inside a group.</p>
+				<p>Clicking on the last exception link would bring the widget in the following state, where the last exception is selected and the position and zoom level of the chart are computed so that the selected item is not hidden inside a group.</p>
 				<a class="fancybox" rel="group" title="simple line with time and executions" href="img/test_history/10.png"><img class="article_image" id="test_history_10" src="img/test_history/10.png" alt="" /></a>
 				<p>This is the version used now in production and I am proud to say I did not only designed the widget, I was also the one who wrote the code to bring it to life.</p>
 
