added line breakers between user observations

--- a/curation.html
+++ b/curation.html
@@ -95,7 +95,7 @@
 
 				<!-- show pictures of the previous version -->
 				<a class="fancybox" rel="curation tool before" title="Findings list" href="img/curation/before/snapshot-all%20findings.JPG"><img class="gallery2" id="curation_before_1" src="img/curation/before/snapshot-all%20findings.JPG" alt="" style="vertical-align: top;"/></a>
-				<a class="fancybox" rel="curation tool before" title="Article" href="img/curation/before/snapshot-top%20screen.JPG"><img class="gallery2" id="curation_before_2" src="img/curation/before/snapshot-above%20fold.jpg" alt="" /></a>
+				<a class="fancybox" rel="curation tool before" title="Article" href="img/curation/before/snapshot-finding.JPG"><img class="gallery2" id="curation_before_2" src="img/curation/before/snapshot-above%20fold.jpg" alt="" /></a>
 
 				<!-- explain in a few words the main flows -->
 
@@ -154,6 +154,7 @@
 				<p>For a more detailed list of observations you can read the notes I took from the users I observed and interviewed.</p>
 
 				<span id="more_observations" class="definitions">
+					<br>
 					<p>First user</p>
 
 					<ul class="article_list">
@@ -170,6 +171,7 @@
 						<li>genotype table, sense of focus would help not to lose track when transferring the data from the paper sheet (word document) in the application </li>
 						<li>genotype table, management of the rows (move up/down, delete)</li>
 					</ul>
+					<br>
 
 					<p>Second user</p>
 
@@ -193,7 +195,7 @@
 						<li>finding view, questions page is not to be radically changed, this is a sensitive area since the users are already very familiar with it</li>
 						<li>numbers in findings table do not have to be consecutive, they are mostly used to link the notes to the application</li>
 					</ul>
-
+					<br>
 					<p>Third user</p>
 
 					<ul class="article_list">
