nicely formatted user observations using a table

--- a/curation.html
+++ b/curation.html
@@ -153,64 +153,120 @@
 
 				<p>For a more detailed list of observations you can read the notes I took from the users I observed and interviewed.</p>
 
-				<span id="more_observations" class="definitions">
-					<br>
-					<p>First user</p>
+				<span id="more_observations">
+					<table class="definitions">
+						<tr>
+							<td class="key">First user</td>
+							<td class="value">
+								<ul class="article_list">
+									<li>reduce repetitive work (findings with same values for genes and phenotypes)</li>
+									<li> better/quicker navigation would help</li>
+									<li>prefers to take notes on a paper sheet or a word document and then to do the
+										insertion work (just to do less context switches)
+									</li>
+									<li>stressed the importance of having a way to pre populate some fields</li>
+									<li>finding view, reduce scrolling, the hands starts to numb after a few hours</li>
+									<li>finding view, suggestions for some fields can be removed after a value has been
+										chosen, still needed for corrections and for hovering
+									</li>
+									<li>finding view, sections need to be visible all the time since changes are seldom
+										made (collapse/expand behavior not needed)
+									</li>
+									<li>finding view, a better separation between sections would help</li>
+									<li>genotype table, some columns are complementary and can be shown individually
+										(the ones that are grayed out in the current design)
+									</li>
+									<li>genotype table, duplicated items can be grouped for review purpose</li>
+									<li>genotype table, sense of focus would help not to lose track when transferring
+										the data from the paper sheet (word document) in the application
+									</li>
+									<li>genotype table, management of the rows (move up/down, delete)</li>
+								</ul>
+							</td>
+						</tr>
 
-					<ul class="article_list">
-						<li>reduce repetitive work (findings with same values for genes and phenotypes)</li>
-						<li> better/quicker navigation would help</li>
-						<li>prefers to take notes on a paper sheet or a word document and then to do the insertion work (just to do less context switches)</li>
-						<li>stressed the importance of having a way to pre populate some fields</li>
-						<li>finding view, reduce scrolling, the hands starts to numb after a few hours</li>
-						<li>finding view, suggestions for some fields can be removed after a value has been chosen, still needed for corrections and for hovering</li>
-						<li>finding view, sections need to be visible all the time since changes are seldom made (collapse/expand behavior not needed)</li>
-						<li>finding view, a better separation between sections would help</li>
-						<li>genotype table, some columns are complementary and can be shown individually (the ones that are grayed out in the current design)</li>
-						<li>genotype table, duplicated items can be grouped for review purpose</li>
-						<li>genotype table, sense of focus would help not to lose track when transferring the data from the paper sheet (word document) in the application </li>
-						<li>genotype table, management of the rows (move up/down, delete)</li>
-					</ul>
-					<br>
-
-					<p>Second user</p>
-
-					<ul class="article_list">
-						<li>uses the same method to take notes from the articles first and complete the forms in the app later</li>
-						<li>complete findings table would be helpful for review/verification reasons (a table that contains all the data of the findings)</li>
-						<li>a way to pre fill some of the questions for multiple findings would increase the productivity </li>
-						<li>waiting is annoying</li>
-						<li>finding view, there are questions that never had different answers</li>
-						<li>finding view, next finding button is missing, only next unreviewed finding is available</li>
-						<li>finding view, numbers for questions would help, need to be congruent with the notations from the protocol</li>
-						<li>finding view, duplication button in the genotype table messes up the layout</li>
-						<li>finding view, judgement  drop down, options can be grouped</li>
-						<li>finding view, wrong judgements can be spotted by the application (helpful when working late at night and tired)</li>
-						<li>finding view, a section of questions would be nice to fit on one screen without scrolling</li>
-						<li>finding view, mutation checkboxes can be inferred from the mutation description</li>
-						<li>finding view, the abstract is not very helpful, can be hidden but not removed</li>
-						<li>finding view, layout changes and is confusing when selecting a longer text from the judgement dropdown </li>
-						<li>finding view, autocompletion choices can be collapsed to occupy less space</li>
-						<li>finding view, navigation with tab is helpful when you do fast and repetitive tasks</li>
-						<li>finding view, questions page is not to be radically changed, this is a sensitive area since the users are already very familiar with it</li>
-						<li>numbers in findings table do not have to be consecutive, they are mostly used to link the notes to the application</li>
-					</ul>
-					<br>
-					<p>Third user</p>
-
-					<ul class="article_list">
-						<li>does no take notes as previous users and fills the finding forms along with reading the article (the delay between actions forced him to follow this workflow)</li>
-						<li>the users are assigned articles with significantly different number of findings</li>
-						<li>the number of findings from an articles dictates the workflow</li>
-						<li>finding view, navigation with tab key would help</li>
-						<li>finding view, more feedback for user actions (e.g. search provides no feedback on empty result set)</li>
-						<li>finding view, there are a lot of delays when filling the finding form</li>
-						<li>finding view, inconsistency in waiting behavior (actions take different amounts of time to complete, it is frustrating)</li>
-						<li>article findings view, need of changing the judgement of a finding from the table </li>
-						<li>report view, links to articles would improve navigation </li>
-						<li>report view, articles listed in reports are not in chronological order</li>
-						<li>there is a nasty shortcut to propagate same values in multiple findings by duplicating a finding and rejecting the ones found by the tool</li>
-					</ul>
+						<tr>
+							<td class="key">Second user</td>
+							<td class="value">
+								<ul class="article_list">
+									<li>uses the same method to take notes from the articles first and complete the
+										forms in the app later
+									</li>
+									<li>complete findings table would be helpful for review/verification reasons (a
+										table that contains all the data of the findings)
+									</li>
+									<li>a way to pre fill some of the questions for multiple findings would increase the
+										productivity
+									</li>
+									<li>waiting is annoying</li>
+									<li>finding view, there are questions that never had different answers</li>
+									<li>finding view, next finding button is missing, only next unreviewed finding is
+										available
+									</li>
+									<li>finding view, numbers for questions would help, need to be congruent with the
+										notations from the protocol
+									</li>
+									<li>finding view, duplication button in the genotype table messes up the layout</li>
+									<li>finding view, judgement drop down, options can be grouped</li>
+									<li>finding view, wrong judgements can be spotted by the application (helpful when
+										working late at night and tired)
+									</li>
+									<li>finding view, a section of questions would be nice to fit on one screen without
+										scrolling
+									</li>
+									<li>finding view, mutation checkboxes can be inferred from the mutation
+										description
+									</li>
+									<li>finding view, the abstract is not very helpful, can be hidden but not removed
+									</li>
+									<li>finding view, layout changes and is confusing when selecting a longer text from
+										the judgement dropdown
+									</li>
+									<li>finding view, autocompletion choices can be collapsed to occupy less space</li>
+									<li>finding view, navigation with tab is helpful when you do fast and repetitive
+										tasks
+									</li>
+									<li>finding view, questions page is not to be radically changed, this is a sensitive
+										area since the users are already very familiar with it
+									</li>
+									<li>numbers in findings table do not have to be consecutive, they are mostly used to
+										link the notes to the application
+									</li>
+								</ul>
+							</td>
+						</tr>
+						<tr>
+							<td class="key">Third user</td>
+							<td class="value">
+								<ul class="article_list">
+									<li>does no take notes as previous users and fills the finding forms along with
+										reading the article (the delay between actions forced him to follow this
+										workflow)
+									</li>
+									<li>the users are assigned articles with significantly different number of
+										findings
+									</li>
+									<li>the number of findings from an articles dictates the workflow</li>
+									<li>finding view, navigation with tab key would help</li>
+									<li>finding view, more feedback for user actions (e.g. search provides no feedback
+										on empty result set)
+									</li>
+									<li>finding view, there are a lot of delays when filling the finding form</li>
+									<li>finding view, inconsistency in waiting behavior (actions take different amounts
+										of time to complete, it is frustrating)
+									</li>
+									<li>article findings view, need of changing the judgement of a finding from the
+										table
+									</li>
+									<li>report view, links to articles would improve navigation</li>
+									<li>report view, articles listed in reports are not in chronological order</li>
+									<li>there is a nasty shortcut to propagate same values in multiple findings by
+										duplicating a finding and rejecting the ones found by the tool
+									</li>
+								</ul>
+							</td>
+						</tr>
+					</table>
 				</span>
 
 				<h2>WIREFRAMES</h2>
