--- a/curation.html
+++ b/curation.html
@@ -73,7 +73,7 @@
 				<div><a href="index.html">About</a></div>
 				<div><a href="projects.html">Projects</a></div>
 				<div><a href="education.html">Education</a></div>
-				<div><a href="contact.html">Contact</a></div>	
+				<div><a href="contact.html">Contact</a></div>
 			</div>
 		</div>
 		<div id="right_panel">
@@ -109,7 +109,7 @@
 
 				<p>Even though I had no previous involvement in the project, I saw this as an opportunity to practice my
 					design skills and most importantly, to observe and interview some of the users that were located in
-					the same office as me.</p>
+					the same office as me, so I volunteered to give it a try.</p>
 
 
 				<h2>USER RESEARCH</h2>
@@ -146,12 +146,12 @@
 
 				<!-- talk about the mental model of the users, their schedule, contract, way of getting paid, restrictions enforced by the company to limit careless work -->
 				<p>The context of use was also interesting. Most curators were hired as contractors and mainly worked
-					from home on their own schedule and were paid based on how much work they got done in month. Some of
+					from home on their own schedule and were paid based on how much work they got done in a month. Some of
 					them did this only part time as a second job, for some of them, this was their main job. This meant
 					that some of them were using the application during the day, some during the night, some would sit
 					down for hours, some for shorter periods, based on their schedule and needs.</p>
 
-				<p>For a more detailed list of observations you can read the notes I took from the users I observed and interviewed.</p>
+				<p>For a more detailed list of observations you can read the notes I took during the observation and interview sessions.</p>
 
 				<span id="more_observations">
 					<table class="definitions">
@@ -270,41 +270,115 @@
 				</span>
 
 				<h2>WIREFRAMES</h2>
-				
-				<p>After having a clearer idea of how I wanted the application to look like, I created a series of wireframes in order to communicate with the remote team I was working for and ask for their feedback.</p>
-				
-				<!-- mention balsamiq -->
-				<!-- picture here -->
+
+				<p>Starting from the observations, I began to think of a design that would speed up the data entry,
+					minimize the repetitive work, reduce vertical scrolling, improve navigation and also make the review
+					process more enjoyable and less error prone.</p>
+
+				<p>More than that, the new design would have to follow the current workflows as users were very familiar
+					with the existing tool and slowing them down, even for a short period of time would mean less money for
+					them.</p>
 
 				<h3>Articles and Findings management</h3>
+
+				<p>There was not much to change when it came to displaying lists of articles and findings. I did clean
+					up the screens, removing the unnecessary lines and using visual groupings instead.</p>
+
 				<a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/1.homescreen.png"><img class="gallery2" id="curation_after_1" src="img/curation/after/1.homescreen.png" alt="" /></a>
 				<a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/2.display%20findings%20for%20article.png"><img class="gallery2" id="curation_after_2" src="img/curation/after/2.display%20findings%20for%20article.png" alt="" /></a>
 
-				<h3>Reduced repetitive work</h3>
-				<a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/3.display%20findings%20for%20article%20-%20fill%20multiple%20findings.png"><img class="gallery1" id="curation_after_3" src="img/curation/after/3.display%20findings%20for%20article%20-%20fill%20multiple%20findings.png" alt="" /></a>
+                <p>The information layering was also improved by means of colors and typography and also by using icons
+                    to make status of the findings more visible.</p>
 
-				<h3>The Finding form</h3>
-				<p>better hierarchy</p>
-				<p>moved the mandatory signs to the left</p>
-				<p>changed buttons placement</p>
-				<p>better use of the space, both horizontally and vertically</p>
-				<p>new genotype table</p>
-				<a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/4.finding%20form%20-%20above%20fold.png"><img class="gallery1" id="curation_after_4" src="img/curation/after/4.finding%20form%20-%20above%20fold.png" alt="" /></a>
+                <h3>Repetitive work</h3>
 
-				<h3>Improved Genotype Table</h3>
-				<a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/6.finding%20form%20-%20genotype%20table%20-%20multiple%20rows.png"><img class="gallery3" id="curation_after_6" src="img/curation/after/6.finding%20form%20-%20genotype%20table%20-%20multiple%20rows.png" alt="" /></a>
+                <p>The issues of repetitive work came up with every user I interviewed. There were a lot of times when
+                    they would have wanted a way to pre fill the answers for multiple findings with the same answer.
+                    This was also enforced
+                    by the protocol since the management would not favor copy/paste jobs with the hope of reducing
+                    careless work and errors. I found it interesting that the users cheated anyway by duplicating a completed finding,
+                    modifying the required answers and rejecting the finding they were supposed to fill in the first
+                    place.</p>
+                <a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/3.display%20findings%20for%20article%20-%20fill%20multiple%20findings.png"><img class="gallery1" id="curation_after_3" src="img/curation/after/3.display%20findings%20for%20article%20-%20fill%20multiple%20findings.png" alt="" /></a>
+
+                <p>The solution I proposed involves propagating the answers of a completed finding to all the findings
+                    selected from the table. By hovering one of the selected rows, an icon would show up to the right
+                    and by clicking
+                    the arrow you would get a popup with the option of selecting which answer to be multiplied.</p>
+
+                <p>I think this is better than forcing the users to repeat some steps since this is proven by psychology
+                    research to be a
+                    recipe for mistakes.</p>
+
+                <h3>The Finding form</h3>
+
+                <p>This is the screen of the application that I was advised not to change. There were a few problems
+                    with it nonetheless and I tried to fix them without impacting the users in a negative way.</p>
+
+                <p>One of the things I did not like was the lack of visual hierarchy. I wanted to make the sections and
+                    subsections more distinguishable to help context switches between the computer screen and the paper
+                    notes most users took before filling in the form. I did this by using indentation, typography and by
+                    moving the mandatory marks to the left so they would help the separation of the sections.</p>
+
+                <p>The vertical scrolling was also a thing that came up a lot during research. I tried to fix this by
+                    making better use of the horizontal space and by compressing the suggestions so that the sections
+                    would become shorter. This is also
+                    helping the visual separation.</p>
+
+                <a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/4.finding%20form%20-%20above%20fold.png"><img class="gallery1" id="curation_after_4" src="img/curation/after/4.finding%20form%20-%20above%20fold.png" alt="" /></a>
+
+                <p>There is also a subtle change to the position of the buttons. The navigation buttons were moved to
+                    the sides and the call to action button was placed in the middle, not to be missed and also not to change
+                    the position of other buttons since it has a variable size and in the original version it was
+                    pushing the rest of the buttons to the right, confusing the users and making them click the wrong
+                    action.</p>
+
+                <h3>Improved Genotype Table</h3>
+
+                <p>Some of the times, the genotype table would have a few tens of rows and it would become very hard to
+                    review and modify since all the rows looked pretty much the same.</p>
+
+                <p>The first thing I did was to simplify and visually separate the rows as much as possible. That meant
+                    removing the separators in the favor of visual grouping, reducing the height of the rows and hiding
+                    the actions when they are not needed, showing them on demand to the right of the table.</p>
+
+                <p>Another improvement was to make some sense of all the rows at a single glance. The way the users
+                    added another row in the table was by duplicating either an empty row or a completed one. Most of
+                    the time it was the latter, some of the adjacent rows would be related and share
+                    some values. This means there are some logical groupings hidden in there and
+                    they match the mental model of the users when filling in or verifying information and that gave me
+                    the idea of making them visible. I did this by giving the users the possibility to color and move rows.</p>
+                <a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/6.finding%20form%20-%20genotype%20table%20-%20multiple%20rows.png"><img class="gallery3" id="curation_after_6" src="img/curation/after/6.finding%20form%20-%20genotype%20table%20-%20multiple%20rows.png" alt="" /></a>
 				<a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/7.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20grouping.png"><img class="gallery3" id="curation_after_7" src="img/curation/after/7.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20grouping.png" alt="" /></a>
 				<a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/8.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20focus.png"><img class="gallery3" id="curation_after_8" src="img/curation/after/8.finding%20form%20-%20genotype%20table%20-%20multiple%20rows%20-%20focus.png" alt="" /></a>
 
-				<h3>Improved navigation</h3>
-				<a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/9.navigation%20findings.png"><img class="gallery2" id="curation_after_9" src="img/curation/after/9.navigation%20findings.png" alt="" /></a>
+                <p>The last improvement was making the focused row more visible to also support context switches between
+                    the screen and the written notes and decrease mental load and chance of error.</p>
+
+                <h3>Improved navigation</h3>
+
+                <p>Navigation also came up as an issue during the interviews because the flow would force the users to
+                    easily go only to the next unreviewed finding, which was a frequent action, but would make
+                    navigation to other areas more complicated.</p>
+
+                <p>The solution I proposed was a breadcrumb bar at the top of the screen, visible all the time and with
+                    no restrictions so that the users can navigate to whatever part of the application they want.</p>
+                <a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/9.navigation%20findings.png"><img class="gallery2" id="curation_after_9" src="img/curation/after/9.navigation%20findings.png" alt="" /></a>
 				<a class="fancybox" rel="curation after" title="Home screen" href="img/curation/after/10.navigation%20articles.png"><img class="gallery2" id="curation_after_10" src="img/curation/after/10.navigation%20articles.png" alt="" /></a>
 
+                <p>I also decorated the options with additional information that is needed during navigation, like the
+                    status of a finding or the total number of findings of an article.</p>
 
-				<h2>CONCLUSION</h2>
-				<p>The wireframes were appreciated by the curators but the development team had other plans for the new UI</p>
+                <h2>CONCLUSION</h2>
 
-				<script>
+                <p>This was a great research and design exercise and the curators gave a very positive feedback after
+                    seeing the wireframes.</p>
+
+                <p>Unfortunately, the development team had other plans for the new UI and ignored most of my proposals.
+                    Even though we tried to convince the management to give this design a chance, they would just trust
+                    the development team with any decision regarding this application.</p>
+
+                <script>
 					moreOrLess($("#more_observations"));
 				</script>
 			</div>
