completed list of books

--- a/education.html
+++ b/education.html
@@ -50,28 +50,7 @@
 				height : '800',
 			});
 		</script>
-<!--
-		<div id="grid">
-			<div class = "column"></div>
-			<div class = "column"></div>
-			<div class = "column"></div>
-			<div class = "column"></div>
-			<div class = "column"></div>
-			<div class = "column"></div>
-			<div class = "column"></div>
-			<div class = "column"></div>
-			<div class = "column"></div>
-			<div class = "column"></div>
-			<div class = "column"></div>
-			<div class = "column"></div>
-			<div class = "column"></div>
-			<div class = "column"></div>
-			<div class = "column"></div>
-			<div class = "column"></div>
-			<div class = "column"></div>
-			<div class = "column"></div>
-		</div>
--->
+
 		<div id="left_panel">
 			<div id="photo_container">
 				<img id="profile_photo" src="img/profile_photo.png"/>
@@ -93,7 +72,7 @@
 			</div>
 
 			<div id="schools_panel">	
-				<h1>university</h1>
+				<h1>formal education</h1>
 				<div id="schools">
 					
 					<div class="school">
@@ -107,8 +86,7 @@
 								<span class="title">Users, Experience and Beyond</span>
 								<span class="degree">workshop</span>
 							</div>
-							<div class="description">What is a "user"? What is an "experience"? How do these combine to build a brand, create loyalty, and heighten satisfaction?<br>
-							Taken in its entirety: model, ergonomics, and measurement tools, learned to put something as abstract as "user experience" into more practical, quantifiable, hands-on terms.
+							<div class="description">One day workshop where I learned to put something as abstract as "user experience" into more practical, quantifiable, hands-on terms by using some simple and interesting tools.
 							</div>
 						</div>
 					</div>
@@ -143,7 +121,7 @@
 							<div class="description">Intense class that teaches a human centered design metodology. Besides watching the lessons, I also had to do a lot of practice, going through each step of the process in order to deliver a functional dynamic prototype. 
 							I had to do user observations and interviews, storyboards, multiple versions of wireframes, heuristic evaluation, user testing, dynamic hi-fi prototypes and to review and grade the assignments of my peers.<br>
 							This was a great learning experience that spread across three months of intensive study and practice. At the end, I was one of the less than 200 participants (from a total of more than 16000 attendants) 
-							who obtained a <a class="fancybox" data-fancybox-type="iframe" href="Coursera hciucsd 2014.pdf">Statement of Accomplishment</a> and I also have a project to display in my portfolio.</div>
+							who obtained a <a class="fancybox" data-fancybox-type="iframe" href="Coursera hciucsd 2014.pdf">Statement of Accomplishment</a>. The <a href="be_healthy.html">project</a> is displayed in the projects section of this portfolio.</div>
 						</div>
 					</div>
 					
@@ -218,12 +196,28 @@
 						<span class="author">Edward Tufte</span>
 					</div>
 					<div class="book">
+						<span class="title"><a href ="http://www.amazon.com/Search-User-Interfaces-Marti-Hearst-ebook/dp/B00AKE1W6W/ref=sr_1_1?ie=UTF8&qid=1420294588&sr=8-1&keywords=marti+hearst" target="_blank">Search User Interfaces</a></span>
+						<span class="author">Marti Hearst</span>
+					</div>
+					<div class="book">
 						<span class="title"><a href ="http://www.amazon.com/Things-Designer-People-Voices-Matter/dp/0321767535/ref=sr_1_1?s=books&ie=UTF8&qid=1413363744&sr=1-1&keywords=100+things+every+designer+should+know+about+people" target="_blank">100 Things Every Designer Should Know about People</a></span>						
-						<span class="author">Susan Weinschenk</span>
+						<span class="author">Susan W.</span>
 					</div>
 					<div class="book">
 						<span class="title"><a href ="http://www.amazon.com/Elements-Typographic-Style-Version-Anniversary/dp/0881792128/ref=sr_1_1?s=books&ie=UTF8&qid=1413363856&sr=1-1&keywords=the+elements+of+typographic+style" target="_blank">The Elements of Typographic Style</a></span>						
 						<span class="author">Robert Bringhurst</span>
+					</div>
+					<div class="book">
+						<span class="title"><a href ="http://www.amazon.co.uk/Sketching-User-Experiences-Bill-Buxton/dp/0123819598/ref=sr_1_2?s=books&ie=UTF8&qid=1420294766&sr=1-2&keywords=sketching+user+experiences" target="_blank">Sketching User Experiences</a></span>
+						<span class="author">Bill Buxton</span>
+					</div>
+					<div class="book">
+						<span class="title"><a href ="http://www.amazon.co.uk/Guide-marabout-dessin-Premont-Marie/dp/2501002806/ref=sr_1_1?s=books&ie=UTF8&qid=1420294187&sr=1-1&keywords=rose+marie+de+premont" target="_blank">Practical Drawing Guide</a></span>
+						<span class="author">Rose-Marie de Premont</span>
+					</div>
+					<div class="book">
+						<span class="title"><a href ="http://www.amazon.co.uk/Handbook-Usability-Testing-Conduct-Effective/dp/0470185481/ref=sr_1_1?s=books&ie=UTF8&qid=1420294892&sr=1-1&keywords=handbook+of+usability+testing" target="_blank">Handbook of Usability Testing</a></span>
+						<span class="author">Dana Chisnell, Jeffrey Rubin</span>
 					</div>
 				</div>
 			</div>
