put the curation tool as second item of the list

--- a/projects.html
+++ b/projects.html
@@ -79,6 +79,24 @@
 
 				<div class="project">
 					<div class = "project_thumbnail" onmouseover="hover($(this));" onmouseout="unhover($(this));">
+						<a  class="bottom"href="curation.html">
+							<img src="img/curation/thumbnail.png"/>
+						</a>
+						<div class="overlay">
+							<div class="overlay_inner">
+								<div class="topics">
+									<div class="topic">HUMAN CENTERED</div>
+									<div class="topic">USER OBSERVATION</div>
+									<div class="topic">WIREFRAMES</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="project_title">Biological Content Curation Tool</div>
+				</div>
+
+				<div class="project">
+					<div class = "project_thumbnail" onmouseover="hover($(this));" onmouseout="unhover($(this));">
 						<a class="bottom" href="function_candidates.html" >
 							<img src="img/function_candidates/thumbnail2.png"/>
 						</a>
@@ -134,28 +152,9 @@
 							</div>
 						</div>
 					</div>
-					<div class="project_title">HCI Course Project</div>
+					<div class="project_title">Be healthy - HCI Course Project</div>
 				</div>
 
-				<div class="project">
-					<div class = "project_thumbnail" onmouseover="hover($(this));" onmouseout="unhover($(this));">
-						<a  class="bottom"href="curation.html">
-							<img src="img/curation/thumbnail.png"/>
-						</a>
-						<div class="overlay"> 
-							<div class="overlay_inner"> 
-								<div class="topics">
-									<div class="topic">HUMAN CENTERED</div>
-									<div class="topic">USER OBSERVATION</div>
-									<div class="topic">WIREFRAMES</div>
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="project_title">Content Curation Tool</div>
-				</div>
-				
-				
 			</div>
 			
 			<script>
