small enhancement to content

--- a/function_candidates.html
+++ b/function_candidates.html
@@ -81,11 +81,22 @@
 				<h1>BIOLOGICAL FUNCTIONS SPREADSHEET</h1>
 
 				<h2>PROBLEM TO SOLVE</h2>
-				<p>This is hardly a project but it is instead a nice example of how good typography can drastically improve the experience of the users.</p>
-				<p>The task at hand was to generate a spreadsheet with standard name suggestions for manually introduced data.The names in the second column were given at a time when the system had no internal representation for biological functions and the functions were displayed as simple labels on a canvas.
-	As time went by and functions were modeled in the system, there was a need to map the labels from the canvas to the entities known by the system so that the labels become alive (double clicking them would do something).</p>
-				<p>There is no other way than to do this mapping manually since there were terminology differences and a computer could not be trusted to make the decisions.
-	In order to help the person doing all this manual work, we generated a spreadsheet with valid name suggestions for each biological function.</p>
+
+				<p>This is hardly a project but it is a nice example of how good typography can drastically
+					improve the experience of the users.</p>
+
+				<p>The task at hand was to generate a spreadsheet with standard name suggestions for manually introduced
+					data.The names in the second column were given at a time when the system had no internal
+					representation for biological functions and the functions were displayed as simple labels on a
+					canvas.
+					As time went by and functions were modeled in the system, there was a need to map the labels from
+					the canvas to the entities known by the system so that the labels become alive (double clicking them
+					would do something).</p>
+
+				<p>There is no other way than to do this mapping manually since there were terminology differences and a
+					computer could not be trusted to make the decisions.
+					In order to help the person doing all this manual work, we generated a spreadsheet with valid name
+					suggestions for each biological function.</p>
 				<a class="fancybox" rel="group" title="Original version with unsorted suggestions" href="img/function_candidates/1.png"><img id="function_candidates_1" src="img/function_candidates/1.png" alt="" /></a>
 				<p>In this stage, the user is presented with a list of suggestions that need to be read and pick the suggestion that makes the most sense. As you can tell, this is no easy task because it relies a lot on the working memory and of course, the user needs to do 20 comparisons before picking the right suggestion.</p>
 				<p>We can make this easier just by sorting the suggestions using a similarity metric between two sentences so that the user only needs to focus on the first items before making a decision.</p>
